--- a/projekt-20-literatura-bibliography.bib
+++ b/projekt-20-literatura-bibliography.bib
@@ -75,6 +75,7 @@
 	title 	= "The GNU/Linux platform and freedom respecting software for economists",
 	journal = "Journal of Applied Econometrics",
 	pages 	= "279-286",
+	number 	= "2",
 	doi 	= "https://doi.org/10.1002/jae.990",
 	url 	= "https://onlinelibrary.wiley.com/doi/abs/10.1002/jae.990",
 	year 	= "2008"
@@ -183,6 +184,7 @@
 	title		= "To FUSE or Not to FUSE: Performance of User-Space File Systems", 
 	year		= "2017",
 	pages		= "59-72",
+	isbn		= "978-1-931971-36-2"
 	url 		= "https://www.usenix.org/conference/fast17/technical-sessions/presentation/vangoor"
 }
 
@@ -192,6 +194,7 @@
 	title		= "SGX-FS: Hardening a File System in User-Space with Intel SGX", 
 	year		= "2018",
 	pages		= "67-72",
+	doi			= "10.1109/CloudCom2018.2018.00027",
 	url 		= "https://ieeexplore.ieee.org/document/8590996"
 }
 
@@ -207,7 +210,7 @@
 }
 
 @webpage{Keyring,
-	key 			= "keyring",
+	key 			= "WhatIsLinuxKeyringGnomeKeyringSecretServiceAndDBus",
 	title 			= "What is: Linux keyring, gnome-keyring, Secret Service, and D-Bus",
 	howpublished	= "online",
 	year 			= "2019",
@@ -216,6 +219,71 @@
 	url 			= "https://rtfm.co.ua/en/what-is-linux-keyring-gnome-keyring-secret-service-and-d-bus/",
 	publisher		= "RTFM: Linux, DevOps, and system administration",
 	cited 			= "2021-05-02"
+}
+
+@webpage{libcurl,
+	key 			= "LibcurlTheMultiprotocolFileTransferLibrary",
+	title 			= "libcurl - the multiprotocol file transfer library ",
+	howpublished	= "online",
+	url 			= "https://curl.se/libcurl/",
+	publisher		= "curl.se",
+	cited 			= "2021-05-07"
+}
+
+@webpage{libnotify,
+	key 			= "DesktopNotifications",
+	title 			= "Desktop notifications",
+	howpublished	= "online",
+	year			= "2021",
+	month			= "05",
+	url 			= "https://wiki.archlinux.org/title/Desktop_notifications#Notification_servers",
+	publisher		= "archlinux.org",
+	cited 			= "2021-05-07"
+}
+
+@webpage{libfuse,
+	key 			= "libfuse API documentation",
+	title 			= "LibfuseAPIDocumentation",
+	howpublished	= "online",
+	url 			= "http://libfuse.github.io/doxygen/index.html",
+	publisher		= "github.io",
+	cited 			= "2021-05-07"
+}
+
+@webpage{libsqlite,
+	key 			= "AboutSQLite",
+	title 			= "About SQLite",
+	howpublished	= "online",
+	url 			= "https://www.sqlite.org/about.html",
+	publisher		= "sqlite.org",
+	cited 			= "2021-05-07"
+}
+
+@webpage{libssl,
+	key 			= "WelcomeToOpenSSL",
+	title 			= "Welcome to OpenSSL!",
+	howpublished	= "online",
+	url 			= "https://www.openssl.org/",
+	publisher		= "openssl.org",
+	cited 			= "2021-05-07"
+}
+
+@webpage{libsecret,
+	key 			= "LibsecretLibraryReferenceManual",
+	title 			= "Libsecret Library Reference Manual",
+	howpublished	= "online",
+	url 			= "https://developer.gnome.org/libsecret/",
+	publisher		= "gnome.org",
+	cited 			= "2021-05-07"
+}
+
+@webpage{libgtest,
+	key 			= "GoogletestPrimer",
+	title 			= "Googletest Primer",
+	howpublished	= "online",
+	url 			= "https://google.github.io/googletest/primer.html",
+	publisher		= "github.io",
+	cited 			= "2021-05-07"
 }
 
 @webpage{xdg,
@@ -228,3 +296,7 @@
 	publisher		= "freedesktop.org",
 	cited 			= "2021-04-20"
 }
+
+
+
+https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html
