--- a/projekt-30-prilohy-appendices.tex
+++ b/projekt-30-prilohy-appendices.tex
@@ -1,5 +1,58 @@
 % \chapter{Dokumentace projektu Validované datové uložiště}
+\chapter{Seznam použitých knihoven}
+
+\begin{itemize}
+    \item libcurl
+    \begin{itemize}
+        \item Dokumentace: \url{https://curl.se/libcurl/}
+        \item Repozitář: \url{https://github.com/curl/curl}
+    \end{itemize}
+    \item libnotify
+    \begin{itemize}
+        \item Dokumentace: \url{https://developer.gnome.org/libnotify/0.7/}
+        \item Repozitář: \url{https://gitlab.gnome.org/GNOME/libnotify}
+    \end{itemize}
+    \item libfuse
+    \begin{itemize}
+        \item Dokumentace: \url{http://libfuse.github.io/doxygen/index.html}
+        \item Repozitář: \url{https://github.com/libfuse/libfuse}
+    \end{itemize}
+    \item libsqlite3
+    \begin{itemize}
+        \item Dokumentace: \url{https://www.sqlite.org/capi3ref.html}
+        \item Repozitář: \url{https://www.sqlite.org/cgi/src}
+    \end{itemize}
+    \item libssl
+    \begin{itemize}
+        \item Dokumentace: \url{https://www.openssl.org/docs/man1.1.0/man3/}
+        \item Repozitář: \url{https://github.com/openssl/openssl}
+    \end{itemize}
+    \item libsecret
+    \begin{itemize}
+        \item Dokumentace: \url{https://developer.gnome.org/libsecret/0.20/}
+        \item Repozitář: \url{https://gitlab.gnome.org/GNOME/libsecret}
+    \end{itemize}
+    \item libgtest
+    \begin{itemize}
+        \item Dokumentace: \url{https://google.github.io/googletest/primer.html}
+        \item Repozitář: \url{https://github.com/google/googletest}
+    \end{itemize}
+\end{itemize}
+
 \chapter{Obsah přiloženého média}
+
+\dirtree{%
+    .1 /.
+    .2 bin.
+    .2 home.
+    .3 jeancome.
+    .4 texmf.
+    .5 tex.
+    .3 jeancomeson - asdasda
+    .3 jeancomedaughter - asdasd
+    .2 usr.
+    .3 bin.
+}
 
 \begin{itemize}
     \item[] \textbf{Složka 1} - XXX
