--- a/projekt-30-prilohy-appendices.tex
+++ b/projekt-30-prilohy-appendices.tex
@@ -41,21 +41,12 @@
 
 \chapter{Obsah přiloženého média}
 
-\dirtree{%
-    .1 /.
-    .2 bin.
-    .2 home.
-    .3 jeancome.
-    .4 texmf.
-    .5 tex.
-    .3 jeancomeson - asdasda
-    .3 jeancomedaughter - asdasd
-    .2 usr.
-    .3 bin.
-}
-
 \begin{itemize}
-    \item[] \textbf{Složka 1} - XXX
-    \item[] \textbf{Složka 2} - XXX
-    \item[] \textbf{Složka 3} - XXX
+    \item[] \textbf{src} – zdrojové soubory obou aplikací a testů
+    \item[] \textbf{text} – zdrojové soubory tohoto dokumentu
+    \item[] \textbf{docs} – podpůrné dokumenty jako definice API, zdrojové soubory použitých diagramů
+    \item[] \textbf{packages} – zabalené zdrojové složky pro sestavení balíčku
+    \item[] \textbf{build} – sestavené/spustitelné soubory, instalační balíčky
+    \item[] \textbf{README.md} – návod k instalaci a korektnímu používání
+    \item[] \textbf{xberna18.pdf} – tento dokument
 \end{itemize}
