--- a/projekt.tex
+++ b/projekt.tex
@@ -141,14 +141,14 @@
   % Abstrakt / Abstract
   abstract.cs={
     Práce se zaměřuje na synchronizaci a životní cyklus souborů stažených do uživatelského počítače ze vzdáleného validovaného datového uložiště.
-    Z analýzy trhu vyplynulo, že na trhu je velký výběr aplikací, ale rozdíly mezi nimi jsou relativné velké. Na základě požadavků a stanovené komunikace s validovaným datovým
-    uložištěm byla navržena a implementována aplikace pro systém \mbox{GNU/Linux}. Testování apliakce probíhalo na dvou vybrancýh Linuxových distribucích
+    Z analýzy trhu vyplynulo, že na trhu je velký výběr aplikací, ale rozdíly mezi nimi jsou relativně velké. Na základě požadavků a stanovené komunikace s validovaným datovým
+    uložištěm byla navržena a implementována aplikace pro systém \mbox{GNU/Linux}. Testování aplikace probíhalo na dvou vybraných Linuxových distribucích
     s mock serverem zastupující vzdálené uložiště.
   }, % abstrakt v českém či slovenském jazyce / abstract in czech or slovak language
   abstract.en={
     The aim of this thesis is synchronization and life cycle of files downloaded to user's computer from validated data storage. Based on market analysis
     there is large selection of applications in market but there are relatively large differences along them. Application was designed and implemented for GNU/Linux
-    according to requirements and given validated data storage communication. The application was tested on two selected Linux distributions with mock server
+    according to requirements and given validated data storage communication. The application was tested on two selected Linux distributions with Mock Server
     represententing remote storage.
   }, % abstrakt v anglickém jazyce / abstract in english
   %abstract.en={An abstract of the work in English will be written in this paragraph.},
