--- a/projekt-20-literatura-bibliography.bib
+++ b/projekt-20-literatura-bibliography.bib
@@ -184,7 +184,7 @@
 	title		= "To FUSE or Not to FUSE: Performance of User-Space File Systems", 
 	year		= "2017",
 	pages		= "59-72",
-	isbn		= "978-1-931971-36-2"
+	isbn		= "978-1-931971-36-2",
 	url 		= "https://www.usenix.org/conference/fast17/technical-sessions/presentation/vangoor"
 }
 
@@ -287,7 +287,7 @@
 }
 
 @webpage{xdg,
-	key 			= "xdg",
+	key 			= "xdgutils",
 	title 			= "xdg-utils",
 	howpublished	= "online",
 	year 			= "2019",
@@ -297,8 +297,75 @@
 	cited 			= "2021-04-20"
 }
 
+@webpage{dpkg,
+	key				= "DebianNewMaintainersGuide",	
+	title 			= "Debian New Maintainers' Guide",
+	howpublished	= "online",
+	year 			= "2020",
+	month			= "12",
+	url 			= "https://www.debian.org/doc/manuals/maint-guide/",
+	publisher		= "debian.org",
+	cited 			= "2021-05-08"
+}
 
+@webpage{rpm,
+	key				= "RPMPackagingGuide",
+	title 			= "RPM Packaging Guide",
+	howpublished	= "online",
+	year 			= "2020",
+	month			= "09",
+	url 			= "https://rpm-packaging-guide.github.io/",
+	publisher		= "github.io",
+	cited 			= "2021-05-08"
+}
 
-https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html
-https://www.debian.org/doc/manuals/maint-guide/
-https://rpm-packaging-guide.github.io/
+@webpage{sqlite-c,
+	key				= "AnIntroductionToTheSQLiteCC++Interface",
+	title 			= "An Introduction To The SQLite C/C++ Interface",
+	howpublished	= "online",
+	url 			= "https://www.sqlite.org/cintro.html",
+	publisher		= "sqlite.org",
+	cited 			= "2021-05-07"
+}
+
+@webpage{behave,
+	key				= "BehaviorDrivenDevelopment",
+	title 			= "Behavior Driven Development",
+	howpublished	= "online",
+	url 			= "https://behave.readthedocs.io/en/stable/philosophy.html#bdd-practices",
+	publisher		= "github.io",
+	cited 			= "2021-05-09"
+}
+
+@webpage{systemd-user,
+	key				= "systemdUser",
+	title 			= "systemd/User",
+	howpublished	= "online",
+	year 			= "2021",
+	month			= "05",
+	url 			= "https://wiki.archlinux.org/title/Systemd/User",
+	publisher		= "archlinux.io",
+	cited 			= "2021-05-07"
+}
+
+@webpage{LinuxHierarchy,
+	key				= "FilesystemHierarchyStandard",
+	title 			= "Filesystem Hierarchy Standard",
+	howpublished	= "online",
+	year 			= "2015",
+	month			= "03",
+	url 			= "https://refspecs.linuxfoundation.org/FHS_3.0/fhs-3.0.html",
+	publisher		= "linuxfoundation.org",
+	cited 			= "2021-05-07"
+}
+
+@webpage{DesktopEntrySpecification,
+	author			= "Brown, Preston and Blandford, Jonathan and others",
+	title 			= "Desktop Entry Specification",
+	howpublished	= "online",
+	year 			= "2020",
+	month			= "04",		
+	url 			= "https://specifications.freedesktop.org/desktop-entry-spec/latest/",
+	publisher		= "freedesktop.org",
+	cited 			= "2021-05-08"
+}
